donus-painel/k8s/donus-panel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: stg-donus-deployment
    namespace: donus
    labels:
        app: donus
        tier: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: donus
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: donus
                tier: frontend
        spec:
            containers:
                - image: gcr.io/alfred-302520/stg-donus-api:0.1
                  #command: ["sleep 600"]
                  imagePullPolicy: IfNotPresent
                  name: donus
                  resources: 
                    limits:
                      cpu: 1000
                      memory: 1000Mi
                    requests:
                      cpu: 300m
                      memory: 300Mi          
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 10
