donus-painel/k8s/donus-panel-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: donus
    namespace: donus
    labels:
        app: donus
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 3000
    selector:
        app: donus
        tier: frontend
