donus-painel/k8s/donus-panel-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: stg-donus-ssl-ingress
    namespace: donus
    annotations:
        kubernetes.io/ingress.global-static-ip-name: stg-donus-ssl-ingress-ip
        networking.gke.io/managed-certificates: stg-donus-ssl-certificate
        networking.gke.io/v1beta1.FrontendConfig: "stg-donus-frontend-config"
        #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        #kubernetes.io/ingress.allow-http: "false"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
        ingress.kubernetes.io/proxy-connect-timeout: "6000"
        ingress.kubernetes.io/proxy-send-timeout: "6000"
        ingress.kubernetes.io/proxy-read-timeout: "6000"
spec:
    rules:
        - host: dev-donus.alfreddelivery.com
          http:
              paths:
                  - backend:
                        serviceName: donus
                        servicePort: 3000
